<resources>
    <string name="app_name">Online Book Store</string>
    <string name="login_as">Sign-in/Sign-up as</string>
    <string name="orderedCustomer">Customer</string>
    <string name="publisher">Publisher</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="security_question">Select a security question:</string>
    <string name="security_answer">Answer to security question:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_login_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
